# BitEngine

./: .gitignore  BitEngine.sln  BitEngineConfig.cmake.in  CMakeLists.txt  README.md
BitEngine/: Archetype.h  BitEngine.vcxproj  BitEngine.vcxproj.filters  ComponentArray.h  Core.cpp  Core.h  ECS.h  Engine.cpp  Engine.h  Entity.h  KeyInputManager.cpp  KeyInputManager.h  Keys.h  System.h  Task.h  Window.cpp  Window.h
BitEngine/utils/: CacheSet.h  Globals.h
GameTest/: GameTest.vcxproj  main.cpp
include/BitEngine/: Engine.h  Time.h
include/BitEngine/graphics/: VertexShader.h
include/BitEngine/input/: Keyboard.h
include/BitEngine/scene/: SceneManager.h
shaders/: vs.glsl
src/: CMakeLists.txt  Engine.cpp  FragmentShader.cpp  IShader.cpp  Keyboard.cpp  Mouse.cpp  SceneManager.cpp  ShaderProgram.cpp  Time.cpp  VertexArrayObject.cpp  VertexShader.cpp  main.cpp
src/BitEngine/: CMakeLists.txt
src/BitEngine/include/BitEngine/: Engine.h
src/BitEngine/include/BitEngine/graphics/: FragmentShader.h  ShaderProgram.h  VertexArrayObject.h
src/BitEngine/include/BitEngine/input/: Keys.h  Mouse.h
src/BitEngine/include/BitEngine/math/: Mat3.h  Vec3.h  Vec4.h
src/BitEngine/include/BitEngine/scene/: IScene.h
src/BitEngine/input/: Keyboard.cpp  Mouse.cpp
src/BitEngine/math/: Mat3.cpp  Vec3.cpp  Vec4.cpp
src/glad/: CMakeLists.txt  glad.c
src/graphics/: FragmentShader.cpp  IShader.cpp  ShaderProgram.cpp  VertexArrayObject.cpp  VertexShader.cpp
src/include/BitEngine/graphics/: FragmentShader.h  IShader.h  VertexArrayObject.h  VertexShader.h
src/include/BitEngine/utils/: runAsync.h
src/scene/: SceneManager.cpp
